cabal-version: 2.2

name: wuss
version: 2.0.1.5

synopsis: Secure WebSocket (WSS) clients
description:
  Wuss is a library that lets you easily create secure WebSocket clients over
  the WSS protocol. It is a small addition to
  <https://hackage.haskell.org/package/websockets the websockets package> and
  is adapted from existing solutions by
  <https://gist.github.com/jaspervdj/7198388 @jaspervdj>,
  <https://gist.github.com/mpickering/f1b7ba3190a4bb5884f3 @mpickering>, and
  <https://gist.github.com/elfenlaid/7b5c28065e67e4cf0767 @elfenlaid>.

build-type: Simple
category: Network
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.markdown
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/wuss
  type: git

flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True

common library
  build-depends:
    , base >= 4.16.0 && < 4.20
    , bytestring >= 0.11.3 && < 0.12
    , crypton-connection >= 0.3.1 && < 0.4
    , exceptions >= 0.10.4 && < 0.11
    , network >= 3.1.2 && < 3.2
    , websockets >= 0.12.7 && < 0.13
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

library
  import: library

  exposed-modules: Wuss
  hs-source-dirs: source/library
